--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
     "webpack-dev-server": "^3.10.3"
   }
 }
