--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-react": "^7.8.3",
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "eslint-plugin-react": "^7.18.3",
     "preact": "^10.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
