change stickler eslint.config to eslintrc.json

--- a/.stickler.yml
+++ b/.stickler.yml
@@ -4,7 +4,7 @@ linters:
   csslint:
   stylelint:
   eslint:
-    config: './eslint.config'  
+    config: './eslintrc.json'  
 files:
   ignore:
     - "bin/*"
