--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preact": "^10.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
